include/dsspm_capi.h

    
    /*
    Array of strings containing the names of all properties for the active DSS object.
    */
    DSSPM_CAPI_DLL void DSSElement_Get_AllPropertyNames(char*** ResultPtr, int32_t* ResultCount);
    
    /*
    Full Name of Active DSS Object (general element or circuit element).
    */
    DSSPM_CAPI_DLL char* DSSElement_Get_Name(void);
    
    /*
    Number of Properties for the active DSS object.
    */
    DSSPM_CAPI_DLL int32_t DSSElement_Get_NumProperties(void);